[gd_scene load_steps=9 format=2]

[ext_resource path="res://Inventory/Inventory.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Fonts/ThaleahFat.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.235294, 0.254902, 0.568627, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.254902, 0.568627, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]

[sub_resource type="StyleBoxFlat" id=6]

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Main" type="Node2D" groups=[
"Backup",
]]
script = ExtResource( 2 )

[node name="Inventory" parent="." instance=ExtResource( 1 )]

[node name="Buttons" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 130.0
margin_top = 48.0
margin_right = 187.0
margin_bottom = 106.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="Buttons"]
margin_left = -18.0
margin_top = -8.0
margin_right = 78.0
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 96, 20 )
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="Buttons"]
margin_left = -18.0
margin_top = 24.0
margin_right = 78.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 96, 20 )
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Reload"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="Buttons"]
margin_left = -18.0
margin_top = 56.0
margin_right = 78.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 96, 20 )
focus_mode = 0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Buttons/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Buttons/DeleteButton" to="." method="_on_DeleteButton_pressed"]
